# routers/routers.go
@@ -64,7 +64,8 @@ func InitRouter() *gin.Engine {
 	apiv1 := r.Group("/api/v1")
 	apiv1.Use(jwt.JWT())
 	{
-		apiv1.GET("/appoint", v1.GetPatients)
+		apiv1.GET("/patients", v1.GetPatients)
+		// apiv1.GET("/appoint", v1.GetPatients)
 		apiv1.POST("/appoint", v1.AddAppointment)
 		apiv1.PUT("/appoint/:id", v1.EditAppointment)
 		apiv1.DELETE("/appoint/:id", v1.DelAppointment)
